--- a/content/resources/cms-614s16.md
+++ b/content/resources/cms-614s16.md
@@ -15,6 +15,7 @@ image_metadata:
   image-alt: A photo of a ferris wheel with the words, "Mr. Robot" on it. In the foreground
     are two walls plastered with posters from the TV series.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: ' Mr. Robot marketing display'
 uid: b96f9ce1-ba24-07ba-5908-d0a760b270cd
